# nlsearchv2

./: .env.example  .gitignore  README.md  pyproject.toml  test-db.py  test-db2.py
docs/erd/: README.md  schema.dot  schema.mmd
scripts/: build_erd.py  sync_ontology.py
src/nlsearch/: __init__.py  config.py  orchestrator.py
src/nlsearch/api/: main.py
src/nlsearch/api/static/: app.js  index.html  styles.css
src/nlsearch/erd/: __init__.py  extractor.py  models.py  renderer.py
src/nlsearch/execution/: databricks.py  formatter.py
src/nlsearch/governance/: defaults.py  license.py
src/nlsearch/intent/: __init__.py  analyzer.py  mode_router.py
src/nlsearch/llm/: __init__.py  anthropic_provider.py  base.py  databricks_provider.py  factory.py  intent_context.py  intent_parse.py  openai_provider.py  refiner.py  rune_intent.py
src/nlsearch/memory/: session.py
src/nlsearch/models/: __init__.py  intent.py
src/nlsearch/normalizers/: __init__.py  currency.py  dates.py  places.py
src/nlsearch/semantic/: __init__.py  glossary.py  gold_layer.py  schema_store.py  unity_catalog.py
src/nlsearch/semantic/data/: schema_metadata.json  schema_metadata_orig.json
src/nlsearch/sql/: generator.py  validator.py
src/nlsearch/vocabulary/: ontology.py  synonyms.py
tests/: conftest.py  test_client_queries.py  test_erd.py  test_gold_layer_sql.py  test_llm_intent_engine.py  test_llm_refiner.py  test_mf28_cases.py  test_normalizers.py  test_query_catalog.py  test_unity_catalog.py
tests/data/: client_query_catalog.json  mf28_test_cases.json
(+19 files in other folders)
