[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlsearch"
version = "0.1.0"
description = "Natural language search platform for Hubexo gold-layer data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-dateutil>=2.9.0",
    "pytz>=2024.2",
    "redis>=5.2.0",
    "structlog>=24.4.0",
    "databricks-sql-connector[pyarrow]",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]
llm = [
    "openai>=1.55.0",
    "anthropic[aiohttp]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nlsearch.api" = ["static/*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
